--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,13 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="1"
-    tools:context=".MainActivity" >
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,7 +12,7 @@
         <EditText
             android:id="@+id/etxt_fromdate"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
+            android:layout_height="54dp"
             android:hint="@string/fecha_de_nacimiento" />
         <TextView
             android:text="@string/intoduce_tu_nombre"
@@ -27,7 +22,7 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="23dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/editText" />
@@ -81,6 +76,5 @@
             android:id="@+id/button2" />
 
     </LinearLayout>
-
 
 </LinearLayout>
